--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "dotenv": "^10.0.0",
     "mocha": "^9.0.2",
     "supertest": "^6.1.3"
+  },
+  "dependencies": {
+    "async": "^3.2.0",
+    "node.js": "0.0.1-security"
   }
 }
